# Fast-Fonts

./: .gitignore  README.md  flake.nix  preview.html
Fast-Font/: README.md
scripts/: addfeatures.py  build_fast_iosevka_compact.sh  fix_all_names.sh  fix_font_names.py  generate_fonts.py  make_fast_font.py  pixelize_font.py  pyproject.toml  rename_font.py
