[project]
name = "fast-fonts"
version = "0.1.0"
description = "Fast Font generator for speed reading optimization"
authors = [
    {name = "Fast-Fonts", email = "user@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "fonttools[ufo]>=4.38.0",
    "defcon>=0.10.0",
    "ufoLib2>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[project.scripts]
generate-fonts = "generate_fonts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"